# lgl-client

./: .env.example  .env.local  .gitignore  CLAUDE.md  DEVELOPER.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
api_defs/openapi_3.0/: openapi.json
cc/2025-07-07 12:22:28 - LGL Client Implementation/: implementation_patterns.md  plan.md  summary.md  tasks.md  technical_debt.md
cc/2025-07-08 14:00:00 - LGL Client Test Strategy Implementation/: plan.md  summary.md  tasks.md
clients/lgl_openapi_3.0_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
clients/lgl_openapi_3.0_client/.openapi-generator/: FILES
dev/lgl_client/: README.md  SPEC.md  api_dependencies.md
docs/: README.md
docs/Apis/: AppealRequestsApi.md  AppealsApi.md  AttributesApi.md  CampaignsApi.md  CategoriesApi.md  ClassAffiliationTypesApi.md  ClassAffiliationsApi.md  ConstituentRelationshipsApi.md  ConstituentsApi.md  ContactReportsApi.md  EmailAddressesApi.md  EventsApi.md  FundsApi.md  GiftCategoriesApi.md  GiftTypesApi.md  GiftsApi.md  GroupMembershipsApi.md  GroupsApi.md  InvitationsApi.md  KeywordsApi.md  MailingTemplatesApi.md  MembershipLevelsApi.md  MembershipsApi.md  NotesApi.md  PaymentTypesApi.md  PhoneNumbersApi.md  RelationshipTypesApi.md  StreetAddressesApi.md  TeamMembersApi.md  TypesApi.md  VolunteerTimesApi.md  WebAddressesApi.md
docs/Models/: AddBody.md  Appeal.md  AppealAggregatedResponse.md  AppealRequest.md  AppealRequestAggregatedResponse.md  AppealRequestResponse.md  AppealRequestUpdate.md  AppealRequests_index.md  AppealRequests_show.md  AppealResponse.md  AppealUpdate.md  Appeals_index.md  Appeals_show.md  Attendance.md  Attendance_create.md  Attribute.md  AttributeAggregatedResponse.md  AttributeResponse.md  AttributeUpdate.md  Attributes_index.md  Attributes_show.md  Campaign.md  CampaignAggregatedResponse.md  CampaignResponse.md  CampaignUpdate.md  Campaigns_index.md  Campaigns_show.md  Categories_index.md  Categories_show.md  Category.md  CategoryAggregatedCreate.md  CategoryAggregatedUpdate.md  ClassAffiliation.md  ClassAffiliationAggregatedResponse.md  ClassAffiliationResponse.md  ClassAffiliationType.md  ClassAffiliationTypeAggregatedResponse.md  ClassAffiliationTypeResponse.md  ClassAffiliationTypeUpdate.md  ClassAffiliationTypes_index.md  (+171 more)
src/lgl_client/: __init__.py
tests/: conftest.py
tests/fixtures/: __init__.py  mock_responses.py
tests/integration/: test_live_api.py
tests/security/: test_security_features.py
tests/unit/: test_date_parsing.py  test_error_handling.py  test_fetch_all.py  test_models.py  test_pagination.py  test_performance.py  test_property_based.py  test_search_methods.py
(+828 files in other folders)
